function(add_example name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} restbed::restbed)
endfunction()

add_example(address_binding)
add_example(compression)
add_example(custom_http_method)
add_example(custom_status_code)
add_example(digest_authentication)
add_example(error_handling)
add_example(https_service)
add_example(http_client)
add_example(http_persistent_connection)
add_example(http_pipelining)
add_example(http_service)
add_example(logging)
add_example(multipath_resources)
add_example(multithreaded_service)
add_example(pam_authentication)
add_example(path_parameters)
add_example(resource_authentication)
add_example(resource_filtering)
add_example(rules_engine)
add_example(schedule_work)
add_example(server_side_events)
add_example(service_authentication)
add_example(serving_html)
add_example(session_manager)
add_example(signal_handling)
add_example(syslog_logging)
add_example(transer_encoding_request)
add_example(transfer_encoding_response)
add_example(web_socket)
