function(add_example name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} restbed::restbed)
    set_property(TARGET ${name} PROPERTY FOLDER "examples")
endfunction()

add_example(address_binding)
if(FALSE)
    add_example(compression)
endif()
add_example(custom_http_method)
add_example(custom_status_code)
add_example(digest_authentication)
add_example(error_handling)
add_example(https_service)
add_example(http_client)
add_example(http_persistent_connection)
add_example(http_pipelining)
add_example(http_service)
add_example(logging)
add_example(multipath_resources)
add_example(multithreaded_service)
if(NOT WIN32)
    add_example(pam_authentication)
endif()
add_example(path_parameters)
add_example(resource_authentication)
add_example(resource_filtering)
add_example(rules_engine)
add_example(schedule_work)
add_example(server_side_events)
add_example(service_authentication)
add_example(serving_html)
if(FALSE)
    add_example(session_manager)
endif()
add_example(signal_handling)
if(NOT WIN32)
    add_example(syslog_logging)
endif()
add_example(transfer_encoding_request)
add_example(transfer_encoding_response)
if(FALSE)
    add_example(web_socket)
endif()
